src/main/java/org/example/interpreter/error/CouldNotPerformArithmeticOperationOnNonNumericType.java
package org.example.interpreter.error;

import lombok.AccessLevel;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;
import lombok.ToString;
import lombok.experimental.FieldDefaults;

@Getter
@RequiredArgsConstructor
@EqualsAndHashCode(callSuper = true)
@ToString(callSuper = true)
@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
public class CouldNotPerformArithmeticOperationOnNonNumericType extends CriticalInterpreterException {
}
